--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -6,6 +6,7 @@ return PhpCsFixer\Config::create()
         '@PHP56Migration:risky' => true,
         '@PHPUnit57Migration:risky' => true,
         '@PSR2' => true,
+        'align_multiline_comment' => true,
         'array_syntax' => ['syntax' => 'short'],
         'blank_line_after_opening_tag' => true,
         'class_attributes_separation' => [
@@ -13,6 +14,8 @@ return PhpCsFixer\Config::create()
         ],
         'linebreak_after_opening_tag' => true,
         'native_function_invocation' => true,
+        'no_blank_lines_after_phpdoc' => true,
+        'no_empty_phpdoc' => true,
         'phpdoc_add_missing_param_annotation' => true,
         'phpdoc_indent' => true,
         'phpdoc_inline_tag' => true,
@@ -20,10 +23,12 @@ return PhpCsFixer\Config::create()
         'phpdoc_no_alias_tag' => true,
         'phpdoc_no_empty_return' => true,
         'phpdoc_no_useless_inheritdoc' => true,
+        'phpdoc_order' => true,
         'phpdoc_return_self_reference' => true,
         'phpdoc_scalar' => true,
         'phpdoc_separation' => true,
         'phpdoc_single_line_var_spacing' => true,
+        'phpdoc_to_comment' => true,
         'phpdoc_trim' => true,
         'phpdoc_trim_consecutive_blank_line_separation' => true,
         'phpdoc_types' => true,
